rxmongo persistence plugin

--- a/akka/src/main/resources/application_template.conf
+++ b/akka/src/main/resources/application_template.conf
@@ -1,7 +1,7 @@
 akka {
   log-dead-letters = off
   log-dead-letters-during-shutdown = off
-  loglevel = "DEBUG"
+  loglevel = "INFO"
   stdout-loglevel = "WARNING"
   actor {
     debug {
@@ -11,31 +11,29 @@ akka {
   }
 
   persistence {
-    journal.plugin = "casbah-journal"
-    snapshot-store.plugin = "casbah-snapshot-store"
+    journal.plugin = "akka-contrib-mongodb-persistence-journal"
+    snapshot-store.plugin = "akka-contrib-mongodb-persistence-snapshot"
     journal.max-deletion-batch-size = 3
     publish-plugin-commands = on
     publish-confirmations = on
     view.auto-update-interval = 1s
   }
-}
 
-casbah-journal {
-  mongo-journal-url = "mongodb://{MONGO_USER}:{MONGO_PASSWORD}@ds053784.mongolab.com:53784/scala_days_gpio.messages"
-  mongo-journal-write-concern = "journaled"
-  mongo-journal-write-concern-timeout = 10000
-}
-
-casbah-snapshot-store {
-  mongo-snapshot-url = "mongodb://{MONGO_USER}:{MONGO_PASSWORD}@ds053784.mongolab.com:53784/scala_days_gpio.snapshots"
-  mongo-snapshot-write-concern = "journaled"
-  mongo-snapshot-write-concern-timeout = 10000
+  contrib {
+    persistence.mongodb.mongo.driver = "akka.contrib.persistence.mongodb.RxMongoPersistenceExtension"
+    persistence.mongodb.mongo.mongouri = "mongodb://{{MONGO_USER}}:{{MONGO_PASSWORD}}@ds053784.mongolab.com:53784/scala_days_gpio?authMode=scram-sha1"
+    persistence.mongodb.mongo.journal-collection = "gpio_akka_journal"
+    persistence.mongodb.mongo.journal-index = "gpio_akka_journal_index"
+    persistence.mongodb.mongo.snaps-collection = "gpio_akka_snapshots"
+    persistence.mongodb.mongo.snaps-index = "gpio_akka_snapshots_index"
+    persistence.mongodb.mongo.journal-write-concern = "Acknowledged"
+  }
 }
 
 reaction {
   led.pulse.length = 1200
   correction.factor = 100
-  threshold = 130
+  threshold = 30
 }
 
-number.of.winners = 10
+number.of.winners = 3
