handle test flow

--- a/akka/src/main/resources/application_template.conf
+++ b/akka/src/main/resources/application_template.conf
@@ -1,7 +1,7 @@
 akka {
   log-dead-letters = off
   log-dead-letters-during-shutdown = off
-  loglevel = "DEBUG"
+  loglevel = "INFO"
   stdout-loglevel = "WARNING"
   actor {
     debug {
@@ -37,5 +37,3 @@ reaction {
   correction.factor = 100
   threshold = 130
 }
-
-number.of.winners = 10
